; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_commandfilter.c_CommandFilter_PingCommand.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_commandfilter.c_CommandFilter_PingCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"ping\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"@log\00", align 1
@.str.3 = private unnamed_addr constant [37 x i8] c"Unknown command or invalid arguments\00", align 1
@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CommandFilter_PingCommand(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load i32**, i32*** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @RedisModule_Call(i32* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @RedisModule_ReplyWithCallReply(i32* %15, i32* %16)
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @RedisModule_FreeCallReply(i32* %18)
  br label %23

20:                                               ; preds = %3
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @RedisModule_ReplyWithSimpleString(i32* %21, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.3, i64 0, i64 0))
  br label %23

23:                                               ; preds = %20, %14
  %24 = load i32, i32* @REDISMODULE_OK, align 4
  ret i32 %24
}

declare dso_local i32* @RedisModule_Call(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @RedisModule_ReplyWithCallReply(i32*, i32*) #1

declare dso_local i32 @RedisModule_FreeCallReply(i32*) #1

declare dso_local i32 @RedisModule_ReplyWithSimpleString(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
